# trace-recorder-parser

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: snapshot.rs  snapshot_memdump.rs  streaming.rs  user_events.rs
src/: lib.rs  time.rs  types.rs
src/snapshot/: error.rs  markers.rs  mod.rs  object_properties.rs  recorder_data.rs  symbol_table.rs  time.rs
src/snapshot/event/: isr.rs  low_power.rs  mod.rs  parser.rs  task.rs  user.rs
src/streaming/: entry_table.rs  error.rs  extension_info.rs  header_info.rs  mod.rs  object_data_table.rs  recorder_data.rs  symbol_table.rs  timestamp_info.rs
src/streaming/event/: base.rs  event_group.rs  isr.rs  memory.rs  message_buffer.rs  mod.rs  mutex.rs  object_name.rs  parser.rs  queue.rs  semaphore.rs  state_machine.rs  task.rs  task_notify.rs  trace_start.rs  ts_config.rs  unused_stack.rs  user.rs
test_resources/fixtures/streaming/v10/: trace.psf
test_resources/fixtures/streaming/v12/: trace.psf
test_resources/fixtures/streaming/v13/: trace.psf
test_resources/fixtures/streaming/v14/: trace.psf
test_resources/src/: generate-fixtures.sh
test_resources/src/streaming/v10/: CMakeLists.txt  trcStreamPort.h  trcStreamingConfig.h
test_resources/src/streaming/v12/: CMakeLists.txt  main.c  trcConfig.h  trcStreamPort.h  trcStreamPortConfig.h
test_resources/src/streaming/v13/: CMakeLists.txt  FreeRTOSConfig.h  trcStreamPort.h  trcStreamingConfig.h
test_resources/src/streaming/v14/: CMakeLists.txt  custom_printf_event.c  main.c  trcStreamPort.h  trc_mock.h
tests/: streaming.rs  streaming_v10.rs
