[package]
name = "trace-recorder-parser"
version = "0.1.5"
edition = "2021"
authors = ["Jon Lamb <jon@auxon.io>"]
description = "A Rust library to parse Percepio's TraceRecorder data"
license = "Apache-2.0"
repository = "https://github.com/auxoncorp/trace-recorder-parser"
documentation = "https://docs.rs/trace-recorder-parser"

[dependencies]
tracing = "0.1"
thiserror = "1.0"
derive_more = "0.99"
ordered-float = "3.0"
byteordered = "0.6"

# For the examples
[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "3.2", features = ["derive"] }
exitcode = "1.1"

[target.'cfg(target_family = "unix")'.dev-dependencies]
# Used to prevent panics on broken pipes.
# See:
#   https://github.com/rust-lang/rust/issues/46016#issuecomment-605624865
nix = "0.24"
